# laughtrack

./: .env  .env.production  .eslintrc.json  .gitignore  AGENTS.md  CLAUDE.md  Makefile  ONBOARDING.md  README.md  auth.ts  docker-compose.yml  eslint.config.mjs  free-ticket-only-clubs.csv  middleware.ts  next.config.mjs  nodemon.json  package-lock.json  package.json  scrape.sh  tailwind.config.js  tailwind.config.ts  tsconfig.json  vercel.json
apps/scraper/: .env.example  .flake8  .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  SCRAPERS.md  TAXONOMY.md  audit_seatengine_classic_ids.py  audit_seatengine_ids.py  dashboard.html  false_positives_to_remove.txt  find_seatengine_classic_ids.py  find_seatengine_ids.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-optional.txt  requirements.txt
apps/scraper/.github/: copilot-instructions.md
apps/scraper/docs/: README.md  architecture-diagram.md  scraper-architecture-patterns.md
apps/scraper/migrations/: 20260320_ticketmaster_venue_discovery.sql  20260322_add_improv_asylum.sql  20260322_add_laugh_boston.sql  20260322_add_nicks_comedy_stop.sql  20260323_add_comedian_deny_list.sql  20260323_add_the_rockwell.sql  20260323_seed_improv_boston_closed.sql  20260324_add_comedy_magic_club.sql  20260324_add_comedy_store.sql  20260324_add_comedy_store_la_jolla.sql  20260324_add_comedy_union_closed.sql  20260324_add_csz_philadelphia.sql  20260324_add_dynasty_typewriter.sql  20260324_add_elysian_theater.sql  20260324_add_haha_comedy_club.sql  20260324_add_ice_house_comedy_club.sql  20260324_add_laugh_factory_hollywood.sql  20260324_add_next_in_line_comedy.sql  20260324_add_philly_improv_theater.sql  20260324_add_punch_line_philly.sql  20260324_add_westside_comedy_theater.sql  20260325_add_comedy_mothership.sql  20260325_add_creek_and_cave.sql  20260325_add_east_austin_comedy.sql  20260325_add_esthers_follies.sql  20260325_add_laugh_factory_chicago.sql  20260325_add_laugh_factory_covina.sql  20260325_add_laugh_factory_las_vegas.sql  20260325_add_laugh_factory_long_beach.sql  20260325_add_laugh_factory_reno.sql  20260325_add_laugh_factory_san_diego.sql  20260325_add_sunset_strip_comedy_club.sql  20260325_update_elysian_theater_scraper_key_to_squarespace.sql  20260325_update_haha_comedy_club_scraper_key_to_tixr.sql  20260325_update_ice_house_scraper_key_to_tockify.sql  20260326_add_zanies_comedy_club.sql  20260326_deactivate_capitol_hill_comedy_bar.sql  20260326_fix_seatengine_classic_id_mappings.sql  20260326_fix_seatengine_v1_id_mappings.sql  20260326_recover_seatengine_classic_ids_from_html.sql  (+58 more)
apps/scraper/scripts/: check_seatengine_token.sh  fetch_seatengine_token.sh  launchd_run_scrape_all.zsh
apps/scraper/sql/: __init__.py  club_queries.py  comedian_queries.py  email_queries.py  lineup_queries.py  production_company_queries.py  show_queries.py  tag_queries.py  ticket_queries.py  user_queries.py
apps/scraper/tests/: conftest.py  gioe_stubs.py  test_gioe_stubs.py  test_makefile_targets.py  test_tusk_task_worktree.py
apps/scraper/tmp/: podcast_index_review_20260515_100.csv  (+1 more)
(+5122 files in other folders)
