[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "laughtrack"
version = "0.1.0"
description = "A scraper for comedy events"
requires-python = ">=3.9"
dependencies = [
    "aiohttp>=3.9.0",
    "requests>=2.31.0", 
    "beautifulsoup4>=4.12.0",
    "psycopg2-binary>=2.9.5",
    "pydantic>=2.0.0",
    "loguru>=0.7.0",
    "pytz>=2023.3",
    "Pillow>=10.0.0",
    "PyYAML>=6.0",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "google-auth>=2.0.0",
    "google-api-python-client>=2.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/laughtrack"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

# =============================================================================
# CODE QUALITY & LINTING CONFIGURATION
# =============================================================================

[tool.black]
line-length = 120
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
/(
    # directories
    \.eggs
  | \.git
  | \.mypy_cache
  | \.pytest_cache
  | \.venv
  | _build
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 120
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
src_paths = ["src", "scripts", "tests"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true
ignore_missing_imports = true

# Paths to check
files = ["src", "scripts"]

[[tool.mypy.overrides]]
module = [
    "tests.*",
    "*.tests.*",
]
ignore_errors = true

# =============================================================================
# ARCHITECTURE: IMPORT-LINTER CONTRACTS
# =============================================================================
[tool.importlinter]
root_package = "laughtrack"

## NOTE: A strict layered contract is intentionally omitted at this stage.
## We start with targeted forbidden rules to establish a safe baseline,
## and will tighten to layers after refactors.

[[tool.importlinter.contracts]]
name = "Ports do not depend on app/infra/scrapers/adapters"
type = "forbidden"
source_modules = ["laughtrack.ports"]
forbidden_modules = [
    "laughtrack.app",
    "laughtrack.infrastructure",
    "laughtrack.scrapers",
    "laughtrack.adapters",
]

[[tool.importlinter.contracts]]
name = "Scrapers cannot depend on app"
type = "forbidden"
source_modules = ["laughtrack.scrapers"]
forbidden_modules = ["laughtrack.app"]

[[tool.importlinter.contracts]]
name = "Domain does not import infrastructure or scrapers"
type = "forbidden"
source_modules = ["laughtrack.domain"]
forbidden_modules = [
    "laughtrack.infrastructure",
    "laughtrack.scrapers",
    "laughtrack.adapters",
    "laughtrack.app",
]
